--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Library to execute command line tasks in nodejs and typescript",
   "main": "dist/index.js",
   "scripts": {
+    "commit": "git-cz",
     "test": "jest",
     "testw": "jest --watchAll",
     "linter": "eslint --max-warnings=0 . --ext .ts",
@@ -28,6 +29,11 @@
     "url": "https://github.com/devorama-app/shell-ts/issues"
   },
   "homepage": "https://github.com/devorama-app/shell-ts#readme",
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  },
   "devDependencies": {
     "@types/jest": "^25.2.1",
     "@types/lodash.get": "^4.4.6",
@@ -36,6 +42,8 @@
     "@types/request-promise-native": "^1.0.17",
     "@typescript-eslint/eslint-plugin": "^2.26.0",
     "@typescript-eslint/parser": "^2.26.0",
+    "commitizen": "^4.0.3",
+    "cz-conventional-changelog": "^3.1.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-prettier": "^3.1.2",
